[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netorbit"
version = "0.2.0"
description = "Network traffic visualization tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scapy>=2.5.0",
    "requests>=2.31.0",
    "rich>=13.7.0",
    "textual>=0.80.0",
]

authors = [
    {name = "ZXCurban"}
]

[project.urls]
Homepage = "https://github.com/ZXCurban/netorbit"

[project.scripts]
netorbit = "netorbit.main:main"

[tool.setuptools.packages.find]
where = ["src"]
